fix lightbox alignment

--- a/patchbay/style.css
+++ b/patchbay/style.css
@@ -339,19 +339,27 @@ button:hover {
 /* lightbox - used in message-confirm */
 
 .lightbox {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0 !important;
+  right: 0;
   overflow: auto;
   padding: 1.5em;
+  z-index: 2;
+}
+
+.lightbox__content > * {
   margin-top: 3em;
   margin-bottom: 3em;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   max-width: 600px;
   max-height: calc(100vh - 6em);
   background: #f5f5f5;
-  margin-left: auto;
-  margin-right: auto;
   border: 1px solid #eee;
   border-radius: .2em;
-  z-index: 2;
 }
 
 /* searchprompt */
@@ -505,7 +513,7 @@ button:hover {
   }
 
   .menu,
-  .lightbox {
+  .lightbox__content > * {
     background: #20232a;
     border-color: #30343c;
   }
